# stackless

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  VISION.md  clippy.toml  deny.toml  dist-workspace.toml  mise.toml  rust-toolchain.toml  taplo.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
crates/render-client/: .gitattributes  Cargo.toml
crates/render-client/src/: lib.rs
crates/stackless/: Cargo.toml
crates/stackless-core/: Cargo.toml
crates/stackless-core/src/: checkpoint.rs  fault.rs  host.rs  lib.rs  lockfile.rs  names.rs  process.rs  substrate.rs
crates/stackless-core/src/def/: error.rs  graph.rs  interp.rs  mod.rs  model.rs  parse.rs  validate.rs
crates/stackless-core/src/engine/: error.rs  mod.rs  plan.rs  progress.rs  run.rs
crates/stackless-core/src/state/: error.rs  instance.rs  journal.rs  lease.rs  lock.rs  mod.rs  reaper.rs  store.rs
crates/stackless-core/src/state/migrations/: 001_init.sql  002_definition_dir.sql  003_reaper.sql  004_lock_host.sql
crates/stackless-core/src/types/: error.rs  mod.rs
crates/stackless-core/tests/: def.rs  engine.rs  fleet_lock.rs  libsql_backend.rs
crates/stackless-core/tests/fixtures/: atto.toml  minimal.toml
crates/stackless-core/tests/fixtures/invalid/: bad_name.toml  depends_on.toml  engine_unknown.toml  reference_syntax.toml  root_origin_conflict.toml  secret_not_required.toml  undeclared_reference.toml  unknown_key.toml
crates/stackless-daemon/: Cargo.toml
crates/stackless-daemon/src/: adopt.rs  client.rs  launchd.rs  lib.rs  proxy.rs  reaper.rs  rpc.rs  server.rs  state.rs
crates/stackless-integrations/: Cargo.toml
crates/stackless-integrations/src/: error.rs  hostable.rs  lib.rs  registry.rs
crates/stackless-integrations/src/providers/: clerk.rs
crates/stackless-local/: Cargo.toml
crates/stackless-local/src/: container.rs  error.rs  git_auth.rs  health.rs  lib.rs  materialize.rs  spawn.rs  wiring.rs
crates/stackless-local/tests/: materialize.rs
crates/stackless-render/: Cargo.toml
crates/stackless-render/src/: api_key.rs  config.rs  error.rs  integrations.rs  lib.rs  prepare.rs  project.rs  render_api.rs  stripe.rs
crates/stackless-render/tests/: render_api.rs
crates/stackless-stripe-projects/: Cargo.toml
crates/stackless-stripe-projects/src/: catalog.rs  error.rs  lib.rs  project.rs  provision.rs  responses.rs  stripe.rs
crates/stackless-stripe-projects/src/catalog/: verify.rs
crates/stackless-stripe-projects/tests/: catalog_drift.rs
crates/stackless-stripe-projects/tests/fixtures/: catalog.json
crates/stackless-vercel/: Cargo.toml
crates/stackless-vercel/src/: api_key.rs  config.rs  error.rs  git.rs  lib.rs  prepare.rs  vercel_api.rs
crates/stackless/src/: commands.rs  daemon_cmd.rs  error.rs  main.rs  output.rs  secrets.rs  verify.rs
crates/vercel-client/: Cargo.toml
crates/vercel-client/src/: lib.rs
docs/: SCHEMA.md
fixtures/duo/: index.html  stackless.toml
fixtures/duo/peer/: index.html  serve-wrapper.sh
fixtures/hello/: index.html  stackless.toml
fixtures/pgdemo/: stackless.toml
specs/: preprocess.py  regen-clients.sh  render-openapi.json  render-trimmed.json  vercel-trimmed.json  vercel_minimize.py
supply-chain/: config.toml
