[package]
name = "stackless-core"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
oxgraph = { version = "0.4.2", features = ["csr"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.39.3"
thiserror = "2.0.18"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
