[package]
name                 = "stackless-core"
edition.workspace    = true
version.workspace    = true
license.workspace    = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
# Fleet plane (M9): remote mode for Turso Cloud (synchronous over HTTP),
# `tls` (rustls) for the libsql://… / https://… HTTPS connector, and
# `core` for the local-libsql test path that proves the helper layer.
# No `replication`/`sync` — fleet mode is single-statement CAS against
# the primary, never embedded replicas.
libsql = { version = "0.9.30", default-features = false, features = [
    "core",
    "remote",
    "tls",
] }
oxgraph = { version = "0.4.2", features = ["csr"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.39.3"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "macros"] }
toml = "1.1.2"
uuid = { version = "1.18.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio    = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
