[package]
name = "stackless-daemon"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1.20", features = ["server", "client", "client-legacy", "http1", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
stackless-core.workspace = true
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
tempfile = "3.27.0"
