[package]
name = "stackless-integrations"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "charset", "http2", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
stackless-core.workspace = true
stackless-stripe-projects.workspace = true
thiserror = "2.0.18"
toml = "1.1.2"
tokio = { version = "1.52.3", features = ["rt", "time", "macros"] }

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6.5"