[package]
name = "stackless-local"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
bollard = "0.21.0"
futures-util = "0.3.32"
gix = { version = "0.84.0", features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls", "worktree-mutation", "credentials"] }
gix-transport = { version = "0.57.1", features = ["blocking-client"] }
secrecy = "0.10"
rand = "0.10.1"
reqwest = { version = "0.13.4", default-features = false }
rustix = { version = "1.1.4", features = ["process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
stackless-core.workspace = true
stackless-daemon.workspace = true
stackless-render.workspace = true
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "time", "macros"] }

[dev-dependencies]
tempfile = "3.27.0"
