[package]
name                 = "stackless-render"
edition.workspace    = true
version.workspace    = true
license.workspace    = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
# Enables chrono's `alloc` feature so `to_rfc3339()` is available on the
# DateTime that render-client returns (its own chrono dep omits `alloc`).
# Load-bearing via feature unification even though no chrono path is named here.
chrono = { version = "0.4.45", default-features = false, features = ["alloc"] }
render-client = { path = "../render-client" }
reqwest = { version = "0.13.4", default-features = false, features = [
    "rustls",
    "charset",
    "http2",
    "json",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
stackless-core.workspace = true
stackless-integrations.workspace = true
stackless-stripe-projects.workspace = true
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "time", "macros", "process"] }
toml = "1.1.2"
toml_edit = "0.25.12"
tempfile  = "3.27.0"

[dev-dependencies]
stackless-core = { path = "../stackless-core" }
tempfile       = "3.27.0"
wiremock       = "0.6.5"
