[package]
name = "stackless-stripe-projects"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
stackless-core.workspace = true
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "time", "macros", "process"] }
toml_edit = "0.25.12"

[dev-dependencies]
tempfile = "3.27.0"
toml = "1.1.2"