[package]
name                 = "stackless-vercel"
edition.workspace    = true
version.workspace    = true
license.workspace    = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
vercel-client = { path = "../vercel-client" }
reqwest = { version = "0.13.4", default-features = false, features = [
    "rustls",
    "charset",
    "http2",
    "json",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
stackless-core.workspace = true
stackless-integrations.workspace = true
stackless-stripe-projects.workspace = true
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "time", "macros", "process"] }
toml = "1.1.2"

[dev-dependencies]
stackless-core = { path = "../stackless-core" }
wiremock       = "0.6.5"
