[package]
name                 = "stackless"
edition.workspace    = true
version.workspace    = true
license.workspace    = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
clap                             = { version = "4.6.1", features = ["derive"] }
humantime                        = "2.3.0"
serde                            = { version = "1.0.228", features = ["derive"] }
serde_json                       = "1.0.150"
stackless-core.workspace         = true
stackless-daemon                 = { version = "0.1.0", path = "../stackless-daemon" }
stackless-integrations.workspace = true
stackless-local.workspace        = true
stackless-render.workspace       = true
stackless-vercel.workspace       = true
thiserror                        = "2.0.18"
tokio                            = { version = "1.52.3", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.27.0"
